[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

[lib]
name = "tic_tac_toe_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "tic-tac-toe"
path = "src/bin/main.rs"

[dependencies]
array2d = "0.3.0"
educe = "0.4.23"
inquire = "0.6.2"
itertools = "0.12.0"
prettytable-rs = "0.10.0"
sm = "0.9.0"
tap = "1.0.1"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
proptest = "1.4.0"
rstest = "0.18.2"
